--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,12 @@
  body {
    font-family: 'Source Sans Pro';
  }
- 
- /* .btn-xl {
-   padding: 1.25rem 2.5rem;
- } */
- 
+
+
+
  .content-section {
-   padding-top: 7.5rem;
-   padding-bottom: 7.5rem;
+   padding-top: 4.5rem;
+   padding-bottom: 5.5rem;
  }
  
  .content-section-heading h2 {
@@ -41,9 +39,9 @@
  }
  
  /* Map */
- .map {
+ /* .map {
    height: 30rem;
- }
+ } */
  /******************************************************************************/
  
  @media (max-width: 992px) {
@@ -56,30 +54,6 @@
    pointer-events: none;
  }
  
- .scroll-to-top {
-   position: fixed;
-   right: 15px;
-   bottom: 15px;
-   display: none;
-   width: 50px;
-   height: 50px;
-   text-align: center;
-   color: white;
-   background: rgba(52, 58, 64, 0.5);
-   line-height: 45px;
- }
- 
- .scroll-to-top:focus, .scroll-to-top:hover {
-   color: white;
- }
- 
- .scroll-to-top:hover {
-   background: #343a40;
- }
- 
- .scroll-to-top i {
-   font-weight: 800;
- }
  
  .masthead {
    min-height: 30rem;
@@ -114,95 +88,6 @@
    }
  }
 
- /* Side Menu */
- #sidebar-wrapper {
-   position: fixed;
-   z-index: 2;
-   right: 0;
-   width: 250px;
-   height: 100%;
-   -webkit-transition: all 0.4s ease 0s;
-   transition: all 0.4s ease 0s;
-   -webkit-transform: translateX(250px);
-   transform: translateX(250px);
-   background: #ECB807;
-   border-left: 1px solid rgba(255, 255, 255, 0.1);
- }
- 
- .sidebar-nav {
-   position: absolute;
-   top: 0;
-   width: 250px;
-   margin: 0;
-   padding: 0;
-   list-style: none;
- }
- 
- .sidebar-nav li.sidebar-nav-item a {
-   display: block;
-   text-decoration: none;
-   color: #fff;
-   padding: 15px;
- }
- 
- .sidebar-nav li a:hover {
-   text-decoration: none;
-   color: #fff;
-   background: rgba(255, 255, 255, 0.2);
- }
- 
- .sidebar-nav li a:active,
- .sidebar-nav li a:focus {
-   text-decoration: none;
- }
- 
- .sidebar-nav > .sidebar-brand {
-   font-size: 1.2rem;
-   background: rgba(52, 58, 64, 0.1);
-   height: 80px;
-   line-height: 50px;
-   padding-top: 15px;
-   padding-bottom: 15px;
-   padding-left: 15px;
- }
- 
- .sidebar-nav > .sidebar-brand a {
-   color: #fff;
- }
- 
- .sidebar-nav > .sidebar-brand a:hover {
-   color: #fff;
-   background: none;
- }
- 
- #sidebar-wrapper.active {
-   right: 250px;
-   width: 250px;
-   -webkit-transition: all 0.4s ease 0s;
-   transition: all 0.4s ease 0s;
- }
- 
- .menu-toggle {
-   position: fixed;
-   right: 15px;
-   top: 15px;
-   width: 50px;
-   height: 50px;
-   text-align: center;
-   color: #fff;
-   background: rgba(52, 58, 64, 0.5);
-   line-height: 50px;
-   z-index: 999;
- }
- 
- .menu-toggle:focus, .menu-toggle:hover {
-   color: #fff;
- }
- 
- .menu-toggle:hover {
-   background: #343a40;
- }
- 
  .service-icon {
    background-color: #fff;
    color: #1D809F;
@@ -231,78 +116,12 @@
    max-width: 30rem;
  }
  
- /* .portfolio-item {
-   display: block;
-   position: relative;
-   overflow: hidden;
-   max-width: 530px;
-   margin: auto auto 1rem;
- }
-  */
- /* .portfolio-item .caption {
-   display: -webkit-box;
-   display: -ms-flexbox;
-   display: flex;
-   height: 100%;
-   width: 100%;
-   background-color: rgba(33, 37, 41, 0.2);
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   z-index: 1;
- } */
- 
- /* .portfolio-item .caption .caption-content {
-   color: #fff;
-   margin: auto 2rem 2rem;
- }
- 
- .portfolio-item .caption .caption-content h2 {
-   font-size: 0.8rem;
-   text-transform: uppercase;
- }
- 
- .portfolio-item .caption .caption-content p {
-   font-weight: 300;
-   font-size: 1.2rem;
- } */
 
-
- /************************************************/
+   /***********************************************/
  
  @media (min-width: 968px) {
 
-/* 
-   .portfolio-item {
-     max-width: none;
-     margin: 0;
-   }
-   .portfolio-item .caption {
-     -webkit-transition: -webkit-clip-path 0.25s ease-out, background-color 0.7s;
-     -webkit-clip-path: inset(0px);
-     clip-path: inset(0px);
-   }
-   .portfolio-item .caption .caption-content {
-     -webkit-transition: opacity 0.25s;
-     transition: opacity 0.25s;
-     margin-left: 5rem;
-     margin-right: 5rem;
-     margin-bottom: 5rem;
-   }
-   .portfolio-item img {
-     -webkit-transition: -webkit-clip-path 0.25s ease-out;
-     -webkit-clip-path: inset(-1px);
-     clip-path: inset(-1px);
-   }
-   .portfolio-item:hover img {
-     -webkit-clip-path: inset(2rem);
-     clip-path: inset(2rem);
-   }
-   .portfolio-item:hover .caption {
-     background-color: rgba(29, 128, 159, 0.9);
-     -webkit-clip-path: inset(2rem);
-     clip-path: inset(2rem);
-   } */
+
  }
  
  footer.footer {
@@ -404,45 +223,10 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			/* background: #60a3bc !important; */
-         
-            
+
+
         }
-   
 
-		/* .user_card {
-			height: 400px;
-			width: 350px;
-			margin-top: auto;
-			margin-bottom: auto;
-			background: #f39c12;
-			position: relative;
-			display: flex;
-			justify-content: center;
-			flex-direction: column;
-			padding: 10px;
-			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			border-radius: 5px;
-
-		} */
-		/* .brand_logo_container {
-			position: absolute;
-			height: 170px;
-			width: 170px;
-			top: -75px;
-			border-radius: 50%;
-			background: #60a3bc;
-			padding: 10px;
-			text-align: center;
-		} */
-		/* .brand_logo {
-			height: 150px;
-			width: 150px;
-			border-radius: 50%;
-			border: 2px solid white;
-		} */
 		.form_container {
 			margin-top: 100px;
 		}
